bk_ida/gccida/c2/mark_home_live
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/mark_home_live/src/reload1.c:2569:25: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v3 = ( ( unsigned int)( mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)cfun->emit->x_regno_reg_rtx[regno])] - 5) < 2) 
                        ^~~~~~~~~~~~
                        mode_class
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/mark_home_live/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/mark_home_live/src/obj/reload1.o] Error 1
